Fix race storing error on context lost

Bug: 905511
Change-Id: I1d37cb900749085384c6abcb2e0b9d8224f0a190
Reviewed-on: https://chromium-review.googlesource.com/c/1338160
Reviewed-by: Jonathan Backer <backer@chromium.org>
Reviewed-by: Robert Kroeger <rjkroege@chromium.org>
Commit-Queue: Jonathan Backer <backer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608463}
Former-commit-id: e6f9a0890732a07a371c4521db9c6976cca4ee07